--- a/Bonobo.Git.Server/Content/sidebar.css
+++ b/Bonobo.Git.Server/Content/sidebar.css
@@ -23,9 +23,9 @@
 .sidebar-bordergrid.top {
     padding-top: 0px;
 }
-.sidebar-bordergrid.bottom {
+#bottomBar {
     border-bottom: hidden;
-    padding-bottom: 0px;
+    
 }
 
 .pure-form-aligned .pure-control-group label {
