--- a/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
@@ -21,7 +21,7 @@ else
                 <li class="dropdown">
                     <details style="display:inline-block;">
                         <summary><i class="fa fa-chevron-down"></i>@Resources.Repository_Layout_Code</summary>
-                        <div style="position:fixed;">
+                        <div style="position:absolute;">
                             @*To get dropdown box as Relative to Fixed postition*@
                             <div class="dropdownBox">
                                 <div>
