--- a/Bonobo.Git.Server/Content/sidebar.css
+++ b/Bonobo.Git.Server/Content/sidebar.css
@@ -18,12 +18,12 @@
 .sidebar-bordergrid {
     padding-top: 15px;
     padding-bottom: 15px;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #E6E6E6;
 }
 .sidebar-bordergrid.top {
     padding-top: 0px;
 }
-#bottomBar {
+.sidebar-bordergrid.bottom {
     border-bottom: hidden;
     
 }
@@ -42,17 +42,18 @@
 }
 .pure-form.pure-form-aligned.detail fieldset {
     padding: 0.8em 0.8em 0.8em 0.8em;
-    background-color: #E6E6E6; /*hsla(210,18%,87%,1)*/
+    /*background-color: #E6E6E6;*/ /*hsla(210,18%,87%,1)*/
     border-radius: 10px;
     margin-bottom: 25px;
+    border: 4px solid #2d3e50;
 }
-.sidebar-overflowtext {
+/*.sidebar-overflowtext {
     display: inline-block;
     width: calc(var(--sidebar-width) - 10em);
     vertical-align: top;
-}
+}*/
 .sidebar-description-text {
-    margin-top: 0.5em;
+    margin-top: 0.4em;
 }
 
 /*for screen size responsive sidebar*/
