--- a/Bonobo.Git.Server/Content/dropdown.css
+++ b/Bonobo.Git.Server/Content/dropdown.css
@@ -5,7 +5,7 @@
         color: #777;
         padding: 5px 20px;
     }
-.dropdownBox {
+#dropdownBox {
     position: relative;
     width: 500px;
     background: white;
@@ -15,21 +15,21 @@
     right: 45%;
     border-style: outset;
 }
-    .dropdownBox input {
+    #dropdownBox input {
         color: black;
         left: 28%;
         position: absolute;
         width: 320px;
         border-style: none;
     }
-    .dropdownBox input {
+    #dropdownBox input {
         outline:none;
     }
-    .dropdownBox label{
+    #dropdownBox label{
         position:relative;
         left: 20px;
     }
-    .dropdownBox .copy-to-clip-button {
+    #dropdownBox .copy-to-clip-button {
         font-size: 12px;
         padding: 4px;
         width: 15px;
