--- a/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
@@ -23,7 +23,7 @@ else
                         <summary><i class="fa fa-chevron-down"></i>@Resources.Repository_Layout_Code</summary>
                         <div style="position:absolute;">
                             @*To get dropdown box as Relative to Fixed postition*@
-                            <div class="dropdownBox">
+                            <div id="dropdownBox">
                                 <div>
                                     @*Git URL + Copy Button*@
                                     <label>@Resources.Repository_Detail_Location</label>
@@ -60,4 +60,14 @@ else
     @RenderSection("scripts", false)
     <script>new Clipboard('.copy-to-clip-button');</script>
     <script src="https://kit.fontawesome.com/66c8834e3a.js" crossorigin="anonymous"></script>
+    <script>
+        var details = [...document.querySelectorAll('details')];
+        document.addEventListener('click', function (e) {
+            if (!details.some(f => f.contains(e.target))) {
+                details.forEach(f => f.removeAttribute('open'));
+            } else {
+                details.forEach(f => !f.contains(e.target) ? f.removeAttribute('open') : '');
+            }
+        })
+    </script>
 }
