--- a/Bonobo.Git.Server/Content/Site.css
+++ b/Bonobo.Git.Server/Content/Site.css
@@ -34,7 +34,7 @@ pre code { font-family: Consolas, monospace; }
 .pure-form em, .pure-form i.fa-info-circle { color: silver; padding-left: 0.3em; }
 .pure-form .pure-button { margin-right: 1em; }
 .pure-form.detail span { vertical-align: middle; line-height: 2em; }
-.pure-form.detail label { color: grey; }
+.pure-form.detail label { /*color: grey;*/ font-weight: bold;}
 textarea.medium, input.medium { width: 30em; }
 textarea.large, input.large { width: 40em;height: 17em; }
 div.pure-control-group.checkboxlist>span { display: inline-block; }
