--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -84,7 +84,12 @@ else
             }
             <div class="pure-control-group">
                 @Html.LabelFor(m => m.LinksUseGlobal)
-                @Html.CheckBoxFor(m => m.LinksUseGlobal, new { @onClick = "document.getElementById('LinksRegex').disabled = this.checked; document.getElementById('LinksUrl').disabled = this.checked" })
+                @Html.CheckBoxFor(m => m.LinksUseGlobal, new {
+               @onClick = "document.getElementById('LinksRegex').disabled = this.checked; " +
+                        "document.getElementById('LinksUrl').disabled =  this.checked; " +
+                        "document.getElementById('LinksRegex').disabled? document.getElementById('LinksRegex').value = '': ''; " +
+                        "document.getElementById('LinksUrl').disabled? document.getElementById('LinksUrl').value = '': '';"
+           })
             </div>
             <div class="pure-control-group">
                 @Html.LabelFor(m => m.LinksRegex)
