--- a/Bonobo.Git.Server/Views/Settings/Index.cshtml
+++ b/Bonobo.Git.Server/Views/Settings/Index.cshtml
@@ -63,16 +63,23 @@
             <label for="AllowPushToCreate" class="pure-checkbox">@Html.CheckBoxFor(m => m.AllowPushToCreate) @Model.GetType().GetDisplayValue("AllowPushToCreate") <i class="fa fa-info-circle" title="@Resources.Settings_Global_AllowPushToCreate_Hint"></i></label>
             <label for="AllowAnonymousPush" class="pure-checkbox">@Html.CheckBoxFor(m => m.AllowAnonymousPush) @Model.GetType().GetDisplayValue("AllowAnonymousPush")</label>
             <label for="IsCommitAuthorAvatarVisible" class="pure-checkbox">@Html.CheckBoxFor(m => m.IsCommitAuthorAvatarVisible) @Model.GetType().GetDisplayValue("IsCommitAuthorAvatarVisible")</label>
-            <label for="AreRegexLinksVisible" class="pure-checkbox">@Html.CheckBoxFor(m => m.AreRegexLinksVisible) @Model.GetType().GetDisplayValue("AreRegexLinksVisible")</label>
+            <label for="AreRegexLinksVisible" class="pure-checkbox">@Html.CheckBoxFor(m => m.AreRegexLinksVisible, new { @onClick = "document.getElementById('LinksRegex').disabled = !this.checked; document.getElementById('LinksUrl').disabled = !this.checked; document.getElementById('LinksRegex').disabled? document.getElementById('LinksRegex').value = '': ''; document.getElementById('LinksUrl').disabled? document.getElementById('LinksUrl').value = '': '';" }) @Model.GetType().GetDisplayValue("AreRegexLinksVisible")</label>
         </div>
         <div class="pure-control-group">
             @Html.LabelFor(m => m.LinksRegex)
-            @Html.TextBoxFor(m => m.LinksRegex, new { @class = "medium", autofocus = "" })
-            @Html.ValidationMessageFor(m => m.LinksRegex)
+            @{
+                object attribs = new { @class = "medium" };
+                if (!Model.AreRegexLinksVisible)
+                {
+                    attribs = new { @class = "medium", disabled = "" };
+                }
+                @Html.TextBoxFor(m => m.LinksRegex, attribs)
+                @Html.ValidationMessageFor(m => m.LinksRegex)
+            }
         </div>
         <div class="pure-control-group">
             @Html.LabelFor(m => m.LinksUrl)
-            @Html.TextBoxFor(m => m.LinksUrl, new { @class = "medium", autofocus = "" })
+            @Html.TextBoxFor(m => m.LinksUrl, attribs)
             <i class="fa fa-info-circle" title="@Resources.Settings_Global_LinksUrl_Hint"></i>
         </div>
         <div class="pure-controls">
